@@ -3,26 +3,29 @@
   :url "https://github.com/matteoredaelli/twitter-api-utils"
   :license {:name "GPL V3+"
             :url "http://www.gnu.org/copyleft/gpl.html"}
-  :dependencies [[org.clojure/clojure "1.7.0"]
+  :dependencies [[org.clojure/clojure "1.10.0"]
+                 ;; https://mvnrepository.com/artifact/javax.activation/activation
+                 [javax.activation/activation "1.1"]
+
                  ;; my
-                 [twitter-api "0.7.8"]
+                 [twitter-api "1.8.0"]
                  ;; for JSON
                  ;;[org.clojure/data.json "0.2.4"]
-                 [cheshire "5.3.1"]
+                 [cheshire "5.9.0"]
                  ;; configuration file
                  [environ "1.0.1"]
                  [clojurewerkz/urly "1.0.0"]
-                 [selmer "0.9.7"]
-                 [http-kit "2.1.19"]
-                 [org.clojure/tools.cli "0.3.3"]
+                 [selmer "1.12.17"]
+                 [http-kit "2.4.0-alpha3"]
+                 [org.clojure/tools.cli "0.4.2"]
                  [com.draines/postal "1.11.3"]
                  ]
-
+  ;;:jvm-opts ["--add-modules" "java.xml.bind"]
   :sign-releases false
   
-  :profiles {:dev {:dependencies [[javax.servlet/servlet-api "2.5"]]
-                   :plugins [[lein-environ "1.0.1"]
-                             [cider/cider-nrepl "0.7.0"]]
+  :profiles {:dev {;:dependencies [[javax.servlet/servlet-api "2.5"]]
+                   :plugins [[lein-environ "1.1.0"]
+                             ]
                    }}
   :main twitter-api-utils.core
   :aot [twitter-api-utils.core]
